Poging tot fixen header clipping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -365,9 +365,10 @@ h6 {
 
 #hero {
     height:800px ;
+    width: auto 100%;
     background: url("../img/placeholders/huis-4.webp");
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: 50% 50%;
     background-size: cover;
     position: relative;
 }
